# BNBMARKET

./: .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.production  LANGUAGE_STRATEGY.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  SECURITY_CREDENTIAL_ROTATION.md  SECURITY_IMPROVEMENTS_SUMMARY.md  SECURITY_REVIEW_PROCESS.md  admin.html  architecture_audit.md  docker-compose.production.yml  eslint.config.js  fix-missing-columns.js  global-teardown.js  hardhat.config.js  index.js  init-database.js  jest.config.backend.js  jest.config.frontend.js  jest.config.js  jest.setup.js  limit-order-filler.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  render.yaml  run-all-migrations.js  run-migration.js  server.js  simple-migration.js  sonar-project.properties  styles.css  swagger.js  (+1 more)
.github/workflows/: ci.yml  deploy-contract.yml  main.yml
.husky/: pre-commit
BNBMARKET-main/: server.js
BNBMARKET-main/public/: lmsr.charts.js
__tests__/: MarketEngineService.test.ts  admin.test.js  color scheme.js  colors.js  css:js implment.js  lmsr-wasm.test.js  market.test.js  routes.test.js  server.test.js
__tests__/utils/: mockData.js
artifacts/: PredictionMarket.json
client/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js
client/src/: Admin.css  Admin.js  App.js  (+3 more)
config/: db.js  logger.js
contracts/: PredictionMarket.sol
docs/: ARCHITECTURE.md  AUTO_MARKET_GENERATOR.md
engine/: market_integration_engine.rs  system_configuration.rs
errors/: customErrors.js
incident_response/: incident_manager.rs
logs/: .4176896c53a7ccb8f0e545b5a60068da0a808d2f-audit.json  .a74d0b06286c8a4cf196682f1943432de0472db1-audit.json
middleware/: ipBlacklist.js  recaptcha.js  validation.js
migrations/: 001_initial_bnbmarket_schema.sql
performance/: performance_profiler.rs
price-service/: Cargo.toml
price-service/proto/: price_service.proto
price-service/src/: lib.rs
public/: index.html  lmsr.charts.js  market.html  market.js  odds-engine.js  router.js  wallet-connection.js
routes/: admin.js  health.js  stats.js
rpc-fetcher/: Cargo.toml
rpc-fetcher/src/: lib.rs
rust-lmsr/: Cargo.toml  build-wasm.sh  index.js  package.json  webpack.config.js
rust-lmsr/rust-lmsr/: Cargo.toml  build-wasm.sh
rust-lmsr/rust-lmsr/rust-lmsr/: Cargo.toml
rust-lmsr/rust-lmsr/rust-lmsr/rust-lmsr/src/: lib.rs
rust-lmsr/rust-lmsr/src/: lib.rs
rust-lmsr/src/: lib.rs  market_maker.rs  probability_engine.rs  risk_assessment.rs
rust-lmsr/tests/: integration_test.rs  wasm_tests.rs
scripts/: compile.mjs  deploy.js  deploy.mjs  integration-check.js  performance-check.js
security/: penetration_test.rs  penetration_test_suite.rs  security_manager.rs  vulnerability_assessment.rs
src/: app.js
tests/: setup.js
utils/: admin-utils.js  blockchain-utils.js  database.js  lmsr-calculations.js  logger.js  user-utils.js
wasm-lmsr/: Cargo.toml  index.js
wasm-lmsr/src/: lib.rs
websocket/: advanced-market-probability-tracker.js  authenticator.js  market-probability-tracker.js  production-market-probability-tracker.js  websocket-manager.js
(+50 files in other folders)
