[package]
name = "bnbmarket-price-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC and async runtime
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.9"