[package]
name = "bnb-rpc-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum interaction
ethers = { version = "1.0", features = ["ws", "rustls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (optional, for additional fetching)
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"