[package]
name = "rust-lmsr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.5"
rust_decimal = { version = "1.33.1", features = ["maths"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
